# BudgetWiser

./: Cargo.toml  README.md  config.json  finance_data.json
src/: main.rs
