[package]
name = "BudgetWiser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
dirs = "5.0"
csv = "1.2"
rayon = "1.5"     
bincode = "1.3"      

